more changes for rename

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,7 +41,7 @@ build_script:
 # Need to convert from shallow to complete for Pkg.clone to work
   - IF EXIST .git\shallow (git fetch --unshallow)
   - C:\projects\julia\bin\julia -e "versioninfo();
-      Pkg.clone(pwd(), \"PolyaGamma\"); Pkg.build(\"PolyaGamma\")"
+      Pkg.clone(pwd(), \"PolyaGammaDistribution\"); Pkg.build(\"PolyaGammaDistribution\")"
 
 test_script:
-  - C:\projects\julia\bin\julia -e "Pkg.test(\"PolyaGamma\")"
+  - C:\projects\julia\bin\julia -e "Pkg.test(\"PolyaGammaDistribution\")"
