--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,9 @@ StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 
 [compat]
 julia = "1"
+Distributions = "0.25"
+SpecialFunctions = "2.0"
+StatsFuns = "0.9"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
